# banana-gpu-embeddings

./: .gitignore  Dockerfile  app.py  download.py  pyproject.toml  requirements.txt  test.py
