[tool.poetry]
name = "banana_1"
version = "0.1.0"
description = ""
authors = ["DoctorSlimm <87606888+DoctorSlimm@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
sanic = "^22.12.0"
accelerate = "^0.18.0"
sentence-transformers = "^2.2.2"
InstructorEmbedding = "^1.0.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
