[tool.poetry]
name = "BANANA_python3.8.12"
version = "0.1.0"
description = ""
authors = ["DoctorSlimm <87606888+DoctorSlimm@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8.12"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
accelerate = "^0.18.0"
requests = "^2.28.2"
sanic = "22.6.2"
InstructorEmbedding = "^1.0.0"
sentence-transformers = "^2.2.2"
python-dotenv = "^1.0.0"
banana-dev = "^4.0.1"
sentry-sdk = "^1.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
